[project]
name = "LORE_sa"
version = "0.0.1"
requires-python = ">=3.11"
description = "LOREM explainer package"
readme = "README.rst"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}

